pillguide/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pillguide
  namespace: pillguide
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pillguide
  template:
    metadata:
      labels:
        app: pillguide
    spec:
      containers:
        - name: pillguide
          image: wien0128/pillguide-be:f9bc723
          ports:
            - containerPort: 8080
