pillguide/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pillguide-service
  namespace: pillguide
spec:
  selector:
    app: pillguide
  ports:
    - port: 80
      targetPort: 80
